--- a/CrmMVC.Web/appsettings.json
+++ b/CrmMVC.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=crm1;Trusted_Connection=True;trusted_connection=true;encrypt=false;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=CRM;Trusted_Connection=True;trusted_connection=true;encrypt=false;"
   },
   "Logging": {
     "LogLevel": {
