--- a/CrmMVC.Application/CrmMVC.Application.csproj
+++ b/CrmMVC.Application/CrmMVC.Application.csproj
@@ -12,6 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CrmMVC.Domain\CrmMVC.Domain.csproj" />
   </ItemGroup>
 
