First forms in progress

--- a/CrmMVC.Infrastructure/CrmMVC.Infrastructure.csproj
+++ b/CrmMVC.Infrastructure/CrmMVC.Infrastructure.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CrmMVC.Application\CrmMVC.Application.csproj" />
+    <ProjectReference Include="..\CrmMVC.Domain\CrmMVC.Domain.csproj" />
   </ItemGroup>
 
 </Project>
