details of company fixed (ThenInclude)

--- a/CrmMVC.Web/appsettings.json
+++ b/CrmMVC.Web/appsettings.json
@@ -1,10 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=CRM;Trusted_Connection=True;trusted_connection=true;encrypt=false;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=CRM;Trusted_Connection=True;trusted_connection=true;encrypt=false;",
+    "CRMDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CrmMVC.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
